iidy/tests/snapshots/yaml_preprocessing_typo_detection__lets_typo.snap
---
source: tests/yaml_preprocessing_typo_detection.rs
expression: error_msg
---
Tag error: '!$lets' is not a valid iidy tag @ test.yaml:1:7 (errno: IY4002)
  -> check tag spelling or see documentation for valid tags

   For more info, run: iidy explain IY4002
