iidy/tests/snapshots/yaml_preprocessing_typo_detection__merges_typo.snap
---
source: tests/yaml_preprocessing_typo_detection.rs
expression: error_msg
---
Tag error: '!$merges' is not a valid iidy tag @ test.yaml:1:7 (errno: ERR_4002)
  -> check tag spelling or see documentation for valid tags

   For more info, run: iidy explain ERR_4002
