iidy/tests/snapshots/yaml_preprocessing_typo_detection__unknown_or_tag_detected.snap
---
source: tests/yaml_preprocessing_typo_detection.rs
expression: error_msg_or
---
Tag error: '!$or' is not a valid iidy tag @ test.yaml:1 (errno: IY4002)
  -> check tag spelling or see documentation for valid tags

   For more info, run: iidy explain IY4002
